--- a/android_files/CanSort/app/src/main/res/layout/activity_main.xml
+++ b/android_files/CanSort/app/src/main/res/layout/activity_main.xml
@@ -1,32 +1,55 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context="com.example.admin.cansort.MainActivity"
-    android:orientation="vertical">
+    android:orientation="vertical"
+    android:background="@color/lightYellow">
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Find out if your trash is recyclable, compostable, or landfill"/>
+        android:text="Find out if your trash is recyclable, compostable, or landfill"
+        android:textAlignment="center"
+        android:layout_gravity="center_horizontal"
+        android:textSize="26sp"
+        android:shadowColor="@color/gray"
+        android:paddingTop="16dp"
+        android:paddingBottom="16dp"
+        android:textColor="@color/darkerGray"
+        android:fontFamily="sans-serif-condensed"/>
+
+    <ImageView
+        android:id="@+id/destination_image_view"
+        android:layout_width="250dp"
+        android:layout_height="250dp"
+        android:layout_gravity="center_horizontal"
+        android:layout_marginBottom="16dp"/>
 
     <Button
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Analyze"
         android:id="@+id/analyze_button"
-        />
-
-    <ImageView
-        android:layout_width="350dp"
-        android:layout_height="350dp"
-        android:id="@+id/destination_image_view"/>
+        android:layout_gravity="center"
+        android:background="@color/pukeGreen"
+        android:textColor="@color/white"
+        android:elevation="5dp"/>
 
     <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/output_text_view"/>
+        android:layout_width="325dp"
+        android:layout_height="125dp"
+        android:textAlignment="center"
+        android:layout_gravity="center"
+        android:textSize="70sp"
+        android:shadowColor="@color/gray"
+        android:paddingTop="16dp"
+        android:paddingBottom="16dp"
+        android:fontFamily="sans-serif-condensed"
+        android:background="@color/darkerGray"
+        android:layout_marginTop="32dp"
+        android:id="@+id/output_text_view"
+        />
 
 </LinearLayout>
